[project]
name = "schemaflow"
version = "0.1.0"
authors = [
    { name = "Siddharth Tumre", email = "siddharthtumre2@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "bitsandbytes>=0.46.1",
    "datasets>=5.0.0",
    "numpy>=2.2.6",
    "peft>=0.19.1",
    "torch>=2.8.0",
    "transformers>=5.12.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["schemaflow", "schemaflow.*"]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
