[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schemaflow"
version = "0.1.0"
authors = [
    { name = "Siddharth Tumre", email = "siddharthtumre2@gmail.com" }
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["schemaflow", "schemaflow.*"]